[gd_scene load_steps=10 format=3 uid="uid://cm1bygewdohjq"]

[ext_resource type="Script" uid="uid://bcu33s02135bn" path="res://minigames/maze/maze_game.gd" id="1_co4bv"]
[ext_resource type="Texture2D" uid="uid://0qrpkeg50u0s" path="res://icon.svg" id="3_co4bv"]
[ext_resource type="Script" uid="uid://bgxwnqupc2awj" path="res://minigames/maze/player.gd" id="4_rsoxt"]
[ext_resource type="Script" uid="uid://bra46slltqhtm" path="res://minigames/maze/ball.gd" id="6_irv2e"]
[ext_resource type="Script" uid="uid://bv6aumie1ret5" path="res://minigames/maze/sheep.gd" id="8_pjj47"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_elsh3"]
size = Vector2(85, 89)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_50vfi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_co4bv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_748p4"]
size = Vector2(65, 66)

[node name="maze" type="Node2D"]
script = ExtResource("1_co4bv")

[node name="background" type="ColorRect" parent="."]
offset_right = 1150.0
offset_bottom = 649.0
color = Color(0.6666667, 0.6666667, 0.6666667, 1)

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(386, 148)
script = ExtResource("4_rsoxt")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(3.0517578e-05, -6.9999847)
scale = Vector2(0.6875, 0.6875)
texture = ExtResource("3_co4bv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0.5, -7.5)
shape = SubResource("RectangleShape2D_elsh3")

[node name="EnergyBar" type="ProgressBar" parent="."]
offset_left = 57.0
offset_top = 549.0
offset_right = 307.0
offset_bottom = 585.0

[node name="EnergyLabel" type="Label" parent="."]
offset_left = 62.0
offset_top = 512.0
offset_right = 115.0
offset_bottom = 535.0
text = "Energy"

[node name="ExitButton" type="Button" parent="."]
offset_left = 33.0
offset_top = 24.0
offset_right = 205.0
offset_bottom = 78.0
text = "Exit"

[node name="Ball" type="Area2D" parent="."]
script = ExtResource("6_irv2e")

[node name="ball1" type="ColorRect" parent="Ball"]
offset_left = 665.0
offset_top = 131.0
offset_right = 687.0
offset_bottom = 153.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
position = Vector2(676, 142)
shape = SubResource("RectangleShape2D_50vfi")

[node name="ball2" type="ColorRect" parent="Ball"]
offset_left = 358.0
offset_top = 362.0
offset_right = 380.0
offset_bottom = 384.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ball"]
position = Vector2(369, 373)
shape = SubResource("RectangleShape2D_co4bv")

[node name="ball3" type="ColorRect" parent="Ball"]
offset_left = 595.0
offset_top = 290.0
offset_right = 617.0
offset_bottom = 312.0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ball"]
position = Vector2(605, 301)
shape = SubResource("RectangleShape2D_co4bv")

[node name="Sheep" type="Area2D" parent="."]
position = Vector2(705, 441)
script = ExtResource("8_pjj47")

[node name="Sheep" type="ColorRect" parent="Sheep"]
offset_right = 68.0
offset_bottom = 68.0
color = Color(0.06666667, 0.078431375, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sheep"]
position = Vector2(33.5, 34)
shape = SubResource("RectangleShape2D_748p4")
